<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/vermouth_and_bitters"
            android:title="@string/vermouth_and_bitters_cocktails"/>
        <item
            android:id="@+id/whiskey"
            android:title="@string/whiskey_cocktails"/>
        <item
            android:id="@+id/gin"
            android:title="@string/gin_cocktails"/>
        <item
            android:id="@+id/rum"
            android:title="@string/rum_cocktails"/>
        <item
            android:id="@+id/vodka"
            android:title="@string/vodka_cocktails"/>
        <item
            android:id="@+id/tequila"
            android:title="@string/tequila_cocktails"/>
        <item
            android:id="@+id/liquor_and_shots"
            android:title="@string/liquor_and_shots_cocktails"/>
    </group>

</menu>