<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cocktailCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:backgroundTint="@color/white"
    app:contentPadding="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imCocktails"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/start"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvDescriptionLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintEnd_toStartOf="@id/tvDescriptionRight"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <TextView
            android:id="@+id/tvDescriptionRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@id/tvDescriptionLeft"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvMiscMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/method"
            android:textColor="@color/black"
            android:textSize="@dimen/miscTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvMethod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:gravity="start"
            android:textColor="@color/grey"
            android:textSize="@dimen/miscDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvMiscMethod"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvMiscDishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/dishes"
            android:textColor="@color/black"
            android:textSize="@dimen/miscTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvMethod"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvDishes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:gravity="start"
            android:textColor="@color/grey"
            android:textSize="@dimen/miscDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvMiscDishes"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvMiscDecoration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/decoration"
            android:textColor="@color/black"
            android:textSize="@dimen/miscTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvDishes"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvDecoration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:gravity="start"
            android:textColor="@color/grey"
            android:textSize="@dimen/miscDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvMiscDecoration"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvMiscIce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/ice"
            android:textColor="@color/black"
            android:textSize="@dimen/miscTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvDecoration"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvIce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:gravity="start"
            android:textColor="@color/grey"
            android:textSize="@dimen/miscDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/end"
            app:layout_constraintTop_toBottomOf="@id/tvMiscIce"
            tools:ignore="RtlSymmetry" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>